kubernetes/apps/talos1018/network/openspeedtest/app/service.yaml
---
# yaml-language-server: $schema=https://json.schemastore.org/kubernetes
apiVersion: v1
kind: Service
metadata:
  name: openspeedtest
  labels:
    app.kubernetes.io/name: openspeedtest
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: openspeedtest
