kubernetes/apps/talos1018/network/openspeedtest/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openspeedtest
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Network
    gethomepage.dev/icon: sh-openspeedtest
    gethomepage.dev/name: Speedtest
    gethomepage.dev/app: openspeedtest
spec:
  parentRefs:
    - name: main-gateway
      namespace: network
  hostnames:
    - "speedtest.${CLUSTER_DOMAIN}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: openspeedtest
          port: 80
