kubernetes/apps/talos1018/network/openspeedtest/app/ingress.yaml
---
# yaml-language-server: $schema=https://json.schemastore.org/kubernetes
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-openspeedtest
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "1024m"
    cert-manager.io/cluster-issuer: "letsencrypt"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Network
    gethomepage.dev/icon: sh-openspeedtest.svg
    gethomepage.dev/name: Speedtest
    gethomepage.dev/app: openspeedtest
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - speedtest.${CLUSTER_DOMAIN}
      secretName: speedtest-tls
  rules:
    - host: speedtest.${CLUSTER_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openspeedtest
                port:
                  number: 80
